회원가입 시 db에 데이터 입력, 이메일-주소 입력 완료

--- a/conplake/WebContent/WEB-INF/views/index.html
+++ b/conplake/WebContent/WEB-INF/views/index.html
@@ -3,23 +3,23 @@
 <head>
 <meta charset="utf-8">
 <title>CONPLAKE</title>
-<link href="../css/common.css" rel="stylesheet" type="text/css"/>
-<link href="../css/header.css" rel="stylesheet" type="text/css"/>
-<link href="../css/sideBox.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/common.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/header.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/sideBox.css" rel="stylesheet" type="text/css"/>
 <style>
 
 
 html, body{ width:100%; height:100%; position:relative; }
-.contentWrap{ width:1200px; height:100%; background:#fff;}
+.contentWrap{ width:100%; height:100%; background:#fff;}
 
 
 
-.mainBoxWrap{ width:919px; float:left; border-left:1px solid #ccc; padding-bottom:50px; }
-.mainBox {width:100%; height:100%; padding-left:40px; margin-top:150px;}
+.mainBoxWrap{ width:950px; float:left; border-left:1px solid #ccc;  }
+.mainBox {width:900px; height:100%; padding-left:50px; margin-top:35px; }
 
 h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding-bottom:35px; }
 
-.ul_concert {width:880px; height:100%;}
+.ul_concert {width:900px; height:100%; display:block; padding-bottom:100px;}
 .ul_concert li {
     -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
@@ -118,7 +118,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
     	</div>
     
    </div>
-   <dic class="mainBoxWrap">
+   <div class="mainBoxWrap">
    		<div class="mainBox">
         	<h1>CONCERT</h1>
         
