--- a/conplake/WebContent/WEB-INF/views/search.html
+++ b/conplake/WebContent/WEB-INF/views/search.html
@@ -14,13 +14,14 @@ html, body{ width:100%; height:100%; position:relative; }
 
 
 
-.mainBoxWrap{ width:919px; float:left; border-left:1px solid #ccc; padding-bottom:50px; }
-.mainBox {width:100%; height:100%; padding-left:40px; margin-top:150px; }
+.mainBoxWrap{ width:950px; float:left; border-left:1px solid #ccc; padding-bottom:50px; }
+.mainBox {width:900px; height:100%; padding-left:50px; margin-top:35px;}
+
 
 h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding-bottom:35px; }
 
-.ul_concert {width:880px; height:100%;}
-.ul_concert li {
+.ul_search {width:880px; height:100%;}
+.ul_search li {
     -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
     -moz-border-right-colors: none;
@@ -118,12 +119,12 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
     	</div>
     
    </div>
-   <dic class="mainBoxWrap">
+   <div class="mainBoxWrap">
    		<div class="mainBox">
         	<h1>RESULTS</h1>
         
-            <ul class="ul_concert">
-            	<li id="list_concert1">
+            <ul class="ul_search">
+            	<li id="list_search">
                     <a href="#"><img width="100" height="100" alt="콘서트이미지1" src="../img/nell0.png"	style="float:left"></a>
                        	<a href="#"><div id="search_info">
                             <p class="concert_title">2015 넬 단독콘서트 NELL’S SEASON ‘201509’</p>
@@ -132,7 +133,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
                         </div></a>
                 </li>
             
-                <li id="list_concert1">
+                <li id="list_search">
                     <a href="#"><img width="100" height="100" alt="콘서트이미지1" src="../img/nell.jpg"	style="float:left"></a>
                        	<a href="#"><div id="search_info">
                             <p class="concert_title">넬 콘서트 : NELL'S SEASON 2015 - Beautiful Day</p>
@@ -142,7 +143,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
                 </li>
                 
                                 
-                <li id="list_concert1">
+                <li id="list_search">
                     <a href="#"><img width="100" height="100" alt="콘서트이미지1" src="../img/nell2.png"	style="float:left"></a>
                        	<a href="#"><div id="search_info">
                             <p class="concert_title">2014 넬 크리스마스 콘서트 CHRISTMAS IN NELL＇S ROOM 2014</p>
@@ -151,7 +152,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
                         </div></a>
                 </li>
                 
-                <li id="list_concert1">
+                <li id="list_search">
                     <a href="#"><img width="100" height="100" alt="콘서트이미지1" src="../img/nell3.png"	style="float:left"></a>
                        	<a href="#"><div id="search_info">
                             <p class="concert_title">NELL＇S SEASON 2014 - NEWTON’S APPLE</p>
@@ -160,7 +161,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
                         </div></a>
                 </li>
                 
-                <li id="list_concert1">
+                <li id="list_search">
                     <a href="#"><img width="100" height="100" alt="콘서트이미지1" src="../img/nell4.png"	style="float:left"></a>
                        	<a href="#"><div id="search_info">
                             <p class="concert_title">2013 넬 크리스마스 콘서트 CHRISTMAS IN NELL＇s ROOM 2013</p>
@@ -169,7 +170,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
                         </div></a>
                 </li>
                 
-                 <li id="list_concert1">
+                 <li id="list_search">
                     <a href="#"><img width="100" height="100" alt="콘서트이미지1" src="../img/nell5.png"	style="float:left"></a>
                        	<a href="#"><div id="search_info">
                             <p class="concert_title"> 2012 넬 콘서트 NELL＇s ROOM</p>
