--- a/conplake/WebContent/resources/css/header.css
+++ b/conplake/WebContent/resources/css/header.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 
-header {width:100%; height:110px; position:absolute; z-index:999;}
+header {width:100%; height:110px;}
 
 .util_menu{ width:100%; height:30px; background :#333;}
 
