--- a/conplake/WebContent/WEB-INF/views/index.html
+++ b/conplake/WebContent/WEB-INF/views/index.html
@@ -74,7 +74,7 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
         </ul>
     </div>
     <div class="gnb">
-    	<a id="logo" href="#"><img id="imgLogo" src="../img/logo_main.png" alt="CONPLAKE" /></a>
+    	<a id="logo" href="#"><img id="imgLogo" src="resources/img/logo_main.png" alt="CONPLAKE" /></a>
     </div>
 </header>
 
@@ -124,14 +124,14 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
         
             <ul class="ul_concert">
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/gmf.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/gmf.png"></a>
                         <p class="concert_title"><a href="#">그랜드 민트 페스티벌 2015</a></p>
                         <p class="concert_date">2015.10.17 ~ 2015.10.18</p>
                         <p class="concert_place"><a href="#">서울시 송파구 올림픽공원</a></p>
                 </li>
                 
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/apple.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/apple.png"></a>
                         <p class="concert_title"><a href="#">쏜애플(THORNAPPLE) 콘서트 ‘한낮’</a></p>
                         <p class="concert_date">2015.12.19</p>
                         <p class="concert_place"><a href="#">AX-KOREA</a></p>
@@ -139,42 +139,42 @@ h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding
                 
                 
                  <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/sg.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/sg.png"></a>
                         <p class="concert_title"><a href="#">SG워너비 컴백 콘서트 ＇I WANNA BE WITH YOU＇</a></p>
                         <p class="concert_date">2015.10.09 ~ 2015.10.10</p>
                         <p class="concert_place"><a href="#">올림픽공원 올림픽홀</a></p>
                 </li>
                 
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/crush.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/crush.png"></a>
                         <p class="concert_title"><a href="#">2015 크러쉬 콘서트〈Crush on You</a></p>
                         <p class="concert_date">2015.11.13 ~ 2015.11.14</p>
                         <p class="concert_place"><a href="#">롯데카드 아트센터 아트홀</a></p>
                 </li>
                 
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/apple.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/apple.png"></a>
                         <p class="concert_title"><a href="#">쏜애플(THORNAPPLE) 콘서트 ‘한낮’</a></p>
                         <p class="concert_date">2015.12.19</p>
                         <p class="concert_place"><a href="#">AX-KOREA</a></p>
                 </li>
                 
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/crush.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/crush.png"></a>
                         <p class="concert_title"><a href="#">2015 크러쉬 콘서트〈Crush on You</a></p>
                         <p class="concert_date">2015.11.13 ~ 2015.11.14</p>
                         <p class="concert_place"><a href="#">롯데카드 아트센터 아트홀</a></p>
                 </li>
                 
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/gmf.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/gmf.png"></a>
                         <p class="concert_title"><a href="#">그랜드 민트 페스티벌 2015</a></p>
                         <p class="concert_date">2015.10.17 ~ 2015.10.18</p>
                         <p class="concert_place"><a href="#">서울시 송파구 올림픽공원</a></p>
                 </li>
                 
                 <li id="list_concert1">
-                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="../img/sg.png"></a>
+                    <a href="#"><img width="198" height="248" alt="콘서트이미지1" src="resources/img/sg.png"></a>
                         <p class="concert_title"><a href="#">SG워너비 컴백 콘서트 ＇I WANNA BE WITH YOU＇</a></p>
                         <p class="concert_date">2015.10.09 ~ 2015.10.10</p>
                         <p class="concert_place"><a href="#">올림픽공원 올림픽홀</a></p>
