--- a/conplake/WebContent/WEB-INF/views/search.html
+++ b/conplake/WebContent/WEB-INF/views/search.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>CONPLAKE</title>
-<link href="../css/common.css" rel="stylesheet" type="text/css"/>
-<link href="../css/header.css" rel="stylesheet" type="text/css"/>
-<link href="../css/sideBox.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/common.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/header.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/sideBox.css" rel="stylesheet" type="text/css"/>
 <style>
 
 
