--- a/conplake/WebContent/WEB-INF/views/login.html
+++ b/conplake/WebContent/WEB-INF/views/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>CONPLAKE</title>
-<link href="../css/common.css" rel="stylesheet" type="text/css"/>
+<link href="resources/css/common.css" rel="stylesheet" type="text/css"/>
 
 <style>
 
