--- a/conplake/WebContent/WEB-INF/views/index.html
+++ b/conplake/WebContent/WEB-INF/views/index.html
@@ -6,61 +6,7 @@
 <link href="resources/css/common.css" rel="stylesheet" type="text/css"/>
 <link href="resources/css/header.css" rel="stylesheet" type="text/css"/>
 <link href="resources/css/sideBox.css" rel="stylesheet" type="text/css"/>
-<style>
-
-
-html, body{ width:100%; height:100%; position:relative; }
-.contentWrap{ width:100%; height:100%; background:#fff;}
-
-
-
-.mainBoxWrap{ width:950px; float:left; border-left:1px solid #ccc;  }
-.mainBox {width:900px; height:100%; padding-left:50px; margin-top:35px; }
-
-h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding-bottom:35px; }
-
-.ul_concert {width:900px; height:100%; display:block; padding-bottom:100px;}
-.ul_concert li {
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    border-color: #d6d6d6 #d6d6d6 #b8b8b8;
-    border-image: none;
-    border-style: solid;
-    border-width: 1px;
-    float: left;
-	margin-right:20px;
-   	margin-bottom:30px;
-    position: relative;
-    width: 198px;
-}
-
-.concert_title{
-    color: #333;
-    font-size: 12px;
-    font-weight: normal;
-	height:14px;
-    line-height: 14px;
-    overflow: hidden;
-    padding: 6px 12px 0;
-    text-overflow: ellipsis;
-	font-weight:600;
-}
-
-.concert_place, .concert_date{
-	color:#666;
-	line-height:14px;
-    min-height: 14px;
-    overflow: hidden;
-    padding: 6px 12px 0;
-}
-
-.concert_place {padding-bottom:10px;}
-
-</style>
-
-
+<link href="resources/css/indexTempl.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
