--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -28,7 +28,17 @@ h4 a:hover {text-decoration:underline;}
 
 
 h3.concert_subTitle {width:900px; height:30px; line-height:30px; font-size:16px; padding-bottom:10px; display:block; font-weight:700; display:block;}
-#concertIntro {width:900px; padding-top:80px; padding-bottom:80px; }
+
+
+.contentView {width:900px; padding-top:30px; }
+#concertIntro {display:block;}
+#concertSetList {display:none;}
+
+#tabBox {padding-top:80px;}
+.tabs {width:900px; height:31px; border-bottom:1px solid #ccc;}
+.tabs li { width:100px; height:30px; float:left; margin-right:10px; border-top:1px solid #ccc; border-right:1px solid #ccc; border-left:1px solid #ccc; border-top-left-radius:4px; border-top-right-radius:4px;}
+.tabs li a { display:block; width:100px; height:30px; text-align:center; line-height:30px; background:#f3f3f3;}
+.tabs li a:hover {height:31px; background:#fff;}
 
 
 #edit_setList {background:#666;}
