--- a/conplake/WebContent/WEB-INF/views/info_concert.html
+++ b/conplake/WebContent/WEB-INF/views/info_concert.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-			<h1>CONCERT INFORMATION</h1>
+	<h1>CONCERT INFORMATION</h1>
         	<h2 id="concertTitle">쏜애플(THORNAPPLE) 콘서트 ‘한낮’
             	<div id="innerButtonBox">
                     <input id="GoTogether" class="innerButton button" type="button" value="함께가요" onclick=""/>
@@ -15,7 +15,7 @@
             
             <div id="concertProfileBox">
             	<div id="concertPoster">
-                	<img src="resources/img/apple.png" width="225" height="300" />
+                	<img src="../img/apple.png" width="225" height="300" />
                 </div>
                 <div id="concertProfile">
                 	<hgroup>
@@ -38,7 +38,7 @@
             </div>
             
             <div class="contentView" id="concertIntro">
-            	<img src="resources/img/apple_intro.png" width="900">
+            	<img src="../img/apple_intro.png" width="900">
             </div>
            
            <div class="contentView" id="concertSetList">
@@ -61,14 +61,9 @@
                     
                   
                 </Table>
+                <p><input id="edit_setList" class="innerButton button" type="button" value="수정"/></p>
             </div>
             
             <footer></footer>
-            
-        </div>
-   </div>
-    
-    
-</div>
 </body>
 </html>
