--- a/conplake/WebContent/resources/css/common.css
+++ b/conplake/WebContent/resources/css/common.css
@@ -4,17 +4,11 @@
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, form, fieldset, p, button{ margin: 0; padding: 0;}
 
-body, h1, h2, h3, h4, th, td, input, select, textarea, button, p, span {
-    font-size: 12px;
-    line-height: 1.5;
-    font-family: '돋움',dotum,sans-serif;
-    color: #333;
-}
 
 img {border:none;}
 ul li{ list-style:none;}
 
-a, h2, h3, h4, h5, h6, table, tr, td {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333; font-weight:500;}
+a, h2, h3, h4, h5, h6, table, tr, td, th, input, select, textarea, button, p, span {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333; font-weight:500;}
 input {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333;}
 
 
