--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -1,16 +1,5 @@
 @CHARSET "UTF-8";
 
-html, body{ width:100%; height:100%; position:relative; }
-.contentWrap{ width:100%; height:100%; background:#fff; }
-
-
-.mainBoxWrap{ width:950px; height:100%; float:left; position:absolute; left:250px; }
-.mainBox {width:900px; height:100%; padding-left:50px; margin-top:35px;  }
-
-footer {width:900px; height:150px;}
-
-h1 {font:20px Arial, Helvetica, sans-serif; font-weight:600; color:#999; padding-bottom:35px; }
-
 #concertTitle {width:900px; height:60px; line-height:30px; font-size:18px; display:inline-block;}
 
 #innerButtonBox {width:215px; height:30px; float:right; display:inline-block;}
@@ -29,10 +18,10 @@ h4 a:hover {text-decoration:underline;}
 
 h3.concert_subTitle {width:900px; height:30px; line-height:30px; font-size:16px; padding-bottom:10px; display:block; font-weight:700; display:block;}
 
-
 .contentView {width:900px; padding-top:30px; }
 #concertIntro {display:block;}
 #concertSetList {display:none;}
+#concertSetList p{ height:30px; clear:both; display:block;}
 
 #tabBox {padding-top:80px;}
 .tabs {width:900px; height:31px; border-bottom:1px solid #ccc;}
@@ -41,8 +30,8 @@ h3.concert_subTitle {width:900px; height:30px; line-height:30px; font-size:16px;
 .tabs li a:hover {height:31px; background:#fff;}
 
 
-#edit_setList {background:#666;}
-#table_setList {margin-top:10px;}
+
+#edit_setList {background:#666; margin-top:15px;}
 .tr_setList { border-bottom:1px solid #ccc;}
 
 .tr_setList th {background:#eee;}
