--- a/conplake/WebContent/resources/css/common.css
+++ b/conplake/WebContent/resources/css/common.css
@@ -8,8 +8,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, form, fieldset, p, button
 img {border:none;}
 ul li{ list-style:none;}
 
-a, h2, h3, h4, h5, h6, table, tr, td, th, input, select, textarea, button, p, span {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333; font-weight:500;}
-input {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333;}
+a, h1, h2, h3, h4, h5, h6, table, tr, td, th, input, select, textarea, button, p, span {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333; font-size:12px; }
+
 
 
 table, tr, td {margin:0; padding:0; border-spacing:0; border:0; border-collapse:collapse;}
