--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -52,4 +52,25 @@ h3.concert_subTitle {width:900px; height:30px; line-height:30px; font-size:16px;
 .reviewHits p{ width:100px;}
 
 
-input#write_review{ background:#666;}
+.input_categoryReview {
+	float:left;
+  width: 100px; /* 원하는 너비설정 */
+  padding: 3px 0 3px 5px; /* 여백으로 높이 설정 */
+  background: url(../img/arrow_down.png) no-repeat 75px center; /* 네이티브 화살표 대체 */  
+  background-size:15px 10px;
+}
+
+#p_searchReview {height:40px; }
+#p_searchReview select, #p_searchReview input{float:right;}
+#p_searchReview select {height:28px;}
+.input_searchReview { width:200px; height:24px; padding-left:5px; margin-left:10px;}
+#btn_searchReview a{ width:24px; height:24px; display:block; background:url(../img/search.png) no-repeat center center; margin-left:5px; float:right;}
+
+
+#p_review span {width:165px;margin-left:355px;}
+#p_review span a {width:15px;  line-height:30px; text-align:center; display:inline-block; font-size:13px; }
+#p_review span a.page {width:30px; font-weight:bold;}
+#p_review span a:hover {color:#C30D22;}
+
+input#write_review{ background:#666; float:right;}
+input#write_review:hover { background:#444;}
