--- a/conplake/WebContent/resources/css/common.css
+++ b/conplake/WebContent/resources/css/common.css
@@ -8,7 +8,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, form, fieldset, p, button
 img {border:none;}
 ul li{ list-style:none;}
 
-a, h1, h2, h3, h4, h5, h6, table, tr, td, th, input, select, textarea, button, p, span {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333; font-size:12px; }
+a, h1, h2, h3, h4, h5, h6, table, tr, td, th, ul, li, input, select, textarea, button, p, span, strong {font-family: '나눔고딕', 'Nanum Gothic', sans-serif; text-decoration:none; color:#333; font-size:12px; }
 
 
 
