--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -22,6 +22,7 @@ h3.concert_subTitle {width:900px; height:30px; line-height:30px; font-size:16px;
 #concertIntro {display:block;}
 #concertSetList {display:none;}
 #concertReview {display:none;}
+#concertTimeLine {display:none;}
 #concertSetList #p_setList, #p_review { height:30px; padding-top:15px;}
 
 
