--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -35,32 +35,42 @@
     
 
 
-.inputBox { width:100%; height:36px; margin:0 0 15px;}
+.rinputBox { width:100%; height:36px; margin:0 0 15px;}
 
 
-#table_setList{ table-layout:fixed;}
+#table_RsetList{ table-layout:fixed;}
 
-#table_setList caption{ text-align:left; height:36px; line-height:36px; padding-top:30px;}
+#table_RsetList caption{ text-align:left; height:36px; line-height:36px; padding-top:30px;}
 
-#table_setList th, #table_setList td{ height:30px; }
+#table_RsetList th, #table_RsetList td{ height:30px; }
 
-.tr_setList{ border-bottom:1px solid #eee;}
-.tr_setList p{ white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
-.tr_setList th{background:#eee; font-weight:normal; text-align:center; border-bottom:1px solid #ccc;}
-.tr_setList td{background:#FCFCFC;}
-
-.setListNum{ width:60px; max-width:60px; text-align:center;}
-.setListTitle{ width:270px; max-width:270px; text-align:left;}
-.setListLink{ width:70px; max-width:70px; text-align:center;}
+.tr_RsetList{ border-bottom:1px solid #eee;}
+.tr_RsetList p{ white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
+.tr_RsetList th{background:#eee; font-weight:normal; text-align:center; border-bottom:1px solid #ccc;}
 
 
+.rsetListNum{ width:60px; max-width:60px; text-align:center;}
+.rsetListTitle{ width:270px; max-width:270px; text-align:left;}
+.rsetListLink{ width:70px; max-width:70px; text-align:center;}
 
 
-	
+#profile_txt {position:relative;}
+#reviewTitle {width:400px;}
+
+
+.p_write {height:30px; line-height:30px; padding-left:3px;}
+#inputProfileTxt {width:378px; height:178px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
+
+#hiddenScroll {width:19px; height:170px; position:absolute; z-index:998; background:#fff; top:1px; right:1px; border-top-right-radius:3px; }
+#fileBox{ width:398px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:20px; z-index:997; }
+
+#fileBox [type="file"] {width:30px; height:30px; float:right; text-indent:-998px; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
+
 #memberButtonBox {
-	width:875px;
+	width:825px;
 	height:100px; 
 	padding-top:35px;
+	
 	}
 #memberButtonBox input {float:right; margin-bottom:50px; }
 	
@@ -83,17 +93,3 @@
 .rButton:hover {
 	background-color:#464646;
 }
-	
-
-
-#profile_txt {position:relative;}
-#reviewTitle {width:400px;}
-
-
-.p_write {height:30px; line-height:30px; padding-left:3px;}
-#inputProfileTxt {width:378px; height:178px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
-
-#hiddenScroll {width:19px; height:170px; position:absolute; z-index:9999; background:#fff; top:1px; right:1px; border-top-right-radius:3px; }
-#fileBox{ width:398px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:20px; z-index:9998; }
-
-#fileBox [type="file"] {width:30px; height:30px; float:right; text-indent:-9999px; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
