--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -59,12 +59,18 @@
 
 
 .p_write {height:30px; line-height:30px; padding-left:3px;}
-#inputProfileTxt {width:378px; height:178px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
+#inputReviewContent {width:378px; height:178px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
 
-#hiddenScroll {width:19px; height:170px; position:absolute; z-index:998; background:#fff; top:1px; right:1px; border-top-right-radius:3px; }
-#fileBox{ width:398px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:20px; z-index:997; }
+#hiddenScroll {width:19px; height:169px; position:absolute; z-index:998; background:#fff; top:1px; right:1px; border-top-right-radius:3px; }
+#fileBox{ width:398px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:0; z-index:997; }
 
 #fileBox [type="file"] {width:30px; height:30px; float:right; text-indent:-998px; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
+
+
+
+
+
+
 
 #memberButtonBox {
 	width:825px;
