--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -3,11 +3,11 @@
 .formBox {
 	float:left;
 	overflow:auto;
-	width:400px;
+	width:900px;
 	overflow:auto;
 }
-#formBoxLeft { min-height:820px; width:375px; padding-right:25px; padding-top:30px; }
-#formBoxRight { min-height:850px; padding-left:25px; padding-right:25px; }
+#formBoxLeft { min-height:750px;  }
+#formBoxRight { height:800px;  }
 
 
 	
@@ -26,7 +26,7 @@
     color: #999;
     display: inline-block;
     font-size: 12px;
-    width:280px;
+    width:780px;
 	height: 36px;
     padding: 0 8px;
 	
@@ -49,20 +49,20 @@
 .tr_RsetList th{background:#eee; font-weight:normal; text-align:center; border-bottom:1px solid #ccc;}
 
 
-.rsetListNum{ width:60px; max-width:60px; text-align:center;}
-.rsetListTitle{ width:270px; max-width:270px; text-align:left;}
-.rsetListLink{ width:70px; max-width:70px; text-align:center;}
+.rsetListNum{ width:100px; max-width:100px; text-align:center;}
+.rsetListTitle{ width:600px; max-width:600px; text-align:left;}
+.rsetListLink{ width:200px; max-width:200px; text-align:center;}
 
 
 #profile_txt {position:relative;}
-#reviewTitle {width:400px;}
 
 
-.p_write {height:30px; line-height:30px; padding-left:3px;}
-#inputReviewContent {width:378px; height:178px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
+
+.p_write {height:30px; line-height:30px; padding-left:3px; padding-top:25px;}
+#reviewContent {width:878px; height:178px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
 
 #hiddenScroll {width:19px; height:169px; position:absolute; z-index:998; background:#fff; top:1px; right:1px; border-top-right-radius:3px; }
-#fileBox{ width:398px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:0; z-index:997; }
+#fileBox{ width:898px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:0; z-index:997; }
 
 #fileBox [type="file"] {width:30px; height:30px; float:right; text-indent:-998px; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
 
@@ -73,9 +73,9 @@
 
 
 #memberButtonBox {
-	width:825px;
+	width:900px;
 	height:100px; 
-	padding-top:35px;
+	
 	
 	}
 #memberButtonBox input {float:right; margin-bottom:50px; }
