--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -6,13 +6,13 @@
 	width:900px;
 	overflow:auto;
 }
-#formBoxLeft { min-height:750px;  }
-#formBoxRight { height:800px;  }
+
+#formBoxRight { min-height:1150px;  }
 
 
 	
 	
-.inputLabel {color:#333; font-size:12px; font-family: '나눔고딕', 'Nanum Gothic', sans-serif; height:36px; line-height:36px; float:left;}
+.inputLabel {color:#333; font-size:12px; font-family: '나눔고딕', 'Nanum Gothic', sans-serif; height:36px; line-height:36px; float:left; padding-left:3px;}
 #formBoxLeft input {float:right; }
 
 	
@@ -36,7 +36,7 @@
 
 
 .rinputBox { width:100%; height:36px; margin:0 0 15px;}
-
+#rinputBox_last {margin:0 0 0 0;}
 
 #table_RsetList{ table-layout:fixed;}
 
@@ -74,11 +74,9 @@
 
 #memberButtonBox {
 	width:900px;
-	height:100px; 
-	
 	
 	}
-#memberButtonBox input {float:right; margin-bottom:50px; }
+#memberButtonBox input {float:right; margin-top:30px; margin-bottom:100px; }
 	
 	
 .rButton { background: #666 none repeat scroll 0 0;
