--- a/conplake/WebContent/resources/css/sideBox.css
+++ b/conplake/WebContent/resources/css/sideBox.css
@@ -23,9 +23,22 @@ li#searchBtnBox {height:50px; display:block;  }
 
 
 /*-------input-------*/
+.inputStyle { background: #fff none repeat scroll 0 0;
+	border-color: #c0c0c0 #d9d9d9 #d9d9d9;
+    border-image: none;
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    color: #999;
+    display: inline-block;
+    font-size: 12px;
+	
+	}
+
 
 .input_category {
   width: 200px; /* 원하는 너비설정 */
+  height:32px;
   padding: 5px 0 5px 5px; /* 여백으로 높이 설정 */
   background: url(../img/arrow_down.png) no-repeat 175px center; /* 네이티브 화살표 대체 */  
   background-size:15px 10px;
