--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -3,16 +3,14 @@
 .formBox {
 	float:left;
 	overflow:auto;
-	width:900px;
-	overflow:auto;
 }
-
-#formBoxRight { min-height:1150px;  }
+#formBoxLeft { min-height:1120px; width:325px; padding-right:25px; padding-top:30px; }
+#formBoxRight { min-height:1120px; width:500px;  padding-right:50px; }
 
 
 	
 	
-.inputLabel {color:#333; font-size:12px; font-family: '나눔고딕', 'Nanum Gothic', sans-serif; height:36px; line-height:36px; float:left; padding-left:3px;}
+.inputLabel {color:#333; font-size:12px; font-family: '나눔고딕', 'Nanum Gothic', sans-serif; height:36px; line-height:36px; float:left;}
 #formBoxLeft input {float:right; }
 
 	
@@ -26,7 +24,7 @@
     color: #999;
     display: inline-block;
     font-size: 12px;
-    width:780px;
+    width:230px;
 	height: 36px;
     padding: 0 8px;
 	
@@ -36,11 +34,11 @@
 
 
 .rinputBox { width:100%; height:36px; margin:0 0 15px;}
-#rinputBox_last {margin:0 0 0 0;}
+
 
 #table_RsetList{ table-layout:fixed;}
 
-#table_RsetList caption{ text-align:left; height:36px; line-height:36px; padding-top:39px;}
+#table_RsetList caption{ text-align:left; height:36px; line-height:36px; padding-top:30px;}
 
 #table_RsetList th, #table_RsetList td{ height:30px; }
 
@@ -49,34 +47,31 @@
 .tr_RsetList th{background:#eee; font-weight:normal; text-align:center; border-bottom:1px solid #ccc;}
 
 
-.rsetListNum{ width:100px; max-width:100px; text-align:center;}
-.rsetListTitle{ width:600px; max-width:600px; text-align:left;}
-.rsetListLink{ width:200px; max-width:200px; text-align:center;}
+.rsetListNum{ width:60px; max-width:60px; text-align:center;}
+.rsetListTitle{ width:180px; max-width:180px; text-align:left;}
+.rsetListLink{ width:85px; max-width:85px; text-align:center;}
 
 
-#profile_txt {position:relative;}
+#profile_txt {width:500px; height:280px;}
+#reviewTitle {width:500px;}
+#p_reviewTitle {margin-bottom:0;}
+
+.p_write {width:497px; height:30px; line-height:30px; padding-left:3px; padding-top:20px;}
+#p_write_first {padding-top:0;}
+#reviewContent {width:478px; height:228px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-top-left-radius:3px; border-top-right-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
 
 
-
-.p_write {height:30px; line-height:30px; padding-left:3px; padding-top:45px;}
-#reviewContent {width:878px; height:148px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-top-left-radius:3px; border-top-right-radius:3px;  padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
-
-#hiddenScroll {width:19px; height:168px; position:absolute; z-index:998; background:#fff; top:1px; right:1px; border-top-right-radius:3px; }
-#fileBox{ width:898px; height:28px; background:#fff; border:1px solid #ddd; border-bottom-left-radius:3px; border-bottom-right-radius:3px; position:absolute; bottom:-29px; z-index:997; }
+#fileBox{ width:498px; height:28px; background:#fff; border:1px solid #ddd; border-top:none; border-bottom-left-radius:3px; border-bottom-right-radius:3px;  }
 
 #fileBox [type="file"] {width:30px; height:30px; float:right; text-indent:-998px; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
 
-
-
-
-
-
-
 #memberButtonBox {
-	width:900px;
+	width:875px;
+	height:100px; 
+	padding-top:35px;
 	
 	}
-#memberButtonBox input {float:right; margin-top:30px; margin-bottom:100px; }
+#memberButtonBox input {float:right; margin-bottom:50px; }
 	
 	
 .rButton { background: #666 none repeat scroll 0 0;
