--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -9,10 +9,12 @@
 #likeToGo {margin-right:15px;}
 
 #concertProfileBox {width:900px; height:300px;}
+
 #concertPoster {width:225px; height:300px; float:left;}
 #concertProfile {width:625px; height:300px; padding-left:50px; float:left;}
+#concertProfile span {width:625px; height:25px; min-height:25px; line-height:25px; word-break:break-all;}
 
-#concertProfile h4, #concertProfile span a {font-size:14px; height:25px; line-height:25px; font-weight:400; }
+#concertProfile p, #concertProfile span a {font-size:14px; min-height:25px; line-height:25px; font-weight:400; }
 h4 a:hover {text-decoration:underline;}
 
 
