--- a/conplake/WebContent/resources/css/readReview.css
+++ b/conplake/WebContent/resources/css/readReview.css
@@ -49,5 +49,5 @@
 .tr_reply #td_replyDate input {background:#fff; border:1px solid #ccc; width:50px; color:#666;}
 
 #div_inputReply {width:860px; border-right:none; text-align:left; height:100px; padding:15px 20px; background:#f5f5f5; border-bottom:1px solid #ccc;}
-#div_inputReply textarea {float:left; width:725px; height:80px; resize:none; padding:10px; color:#333;}
-#div_inputReply input {float:left; width:100px; height:100px; background:#fff; border:1px solid #ccc; border-radius:3px; color:#666;}
+#div_inputReply textarea {float:left; width:735px; height:78px; border-color:#ccc; resize:none; padding:10px; border-top-right-radius:0; border-bottom-right-radius:0; border-right:0; color:#333;}
+#div_inputReply input {float:left; width:100px; height:100px; background:#fff; border:1px solid #ccc; border-radius:3px; border-top-left-radius:0; border-bottom-left-radius:0; color:#666;}
