--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -64,7 +64,7 @@
 
 #fileBox{ width:498px; height:28px; background:#fff; border:1px solid #ddd; border-top:none; border-bottom-left-radius:3px; border-bottom-right-radius:3px;  }
 
-#fileBox [type="file"] {width:30px; height:30px; float:right; text-indent:-998px; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
+#fileBox [type="file"] {width:30px; height:30px; float:right; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
 
 #memberButtonBox {
 	width:875px;
