--- a/conplake/WebContent/resources/css/writeReview.css
+++ b/conplake/WebContent/resources/css/writeReview.css
@@ -2,13 +2,12 @@
 
 .formBox {
 	float:left;
-	overflow:auto;
+	
 }
 #formBoxLeft { min-height:1120px; width:325px; padding-right:25px; padding-top:30px; }
 #formBoxRight { min-height:1120px; width:500px;  padding-right:50px; }
 
 
-	
 	
 .inputLabel {color:#333; font-size:12px; font-family: '나눔고딕', 'Nanum Gothic', sans-serif; height:36px; line-height:36px; float:left;}
 #formBoxLeft input {float:right; }
@@ -52,7 +51,7 @@
 .rsetListLink{ width:85px; max-width:85px; text-align:center;}
 
 
-#profile_txt {width:500px; height:280px;}
+#profile_txt {width:500px; height:auto;}
 #reviewTitle {width:500px;}
 #p_reviewTitle {margin-bottom:0;}
 
@@ -62,9 +61,23 @@
 .reviewContent {width:478px; height:228px; background:#fff; font-size:12px; color:#333; border:1px solid #ddd; border-top-left-radius:3px; border-top-right-radius:3px; padding:10px; resize:none; overflow-x:hidden; overflow-y:auto;}
 
 
-#fileBox{ width:498px; height:28px; background:#fff; border:1px solid #ddd; border-top:none; border-bottom-left-radius:3px; border-bottom-right-radius:3px;  }
+.fileBox{ width:498px; min-height:28px; height:auto; background:#fff; border:1px solid #ddd; border-top:none; border-bottom-left-radius:3px; border-bottom-right-radius:3px;  }
 
-#fileBox [type="file"] {width:30px; height:30px; float:right; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%;}
+
+.fileNameBox { width:458px; min-height:28px; height:auto; padding-left:10px; float:left; vertical-align:middle;  overflow:hidden;  }
+.fileNameBox::-webkit-scrollbar { 
+    display: none; 
+}
+
+
+.p_fileName{ line-height:28px; margin-right:10px;}
+
+
+#btn_deleteFile{ width:10px; height:10px; border:none; padding:0; margin-top:10px; margin-left:5px; background:url(../img/delete.png);  }
+
+
+#nextFileName { position:absolute; right:0; width:10px; height:10px; border:none; margin-top:10px; padding:0; }
+.fileBox [type="file"] {width:30px; height:30px; float:right; overflow:hidden; background:url(../img/attach.png) center center no-repeat; background-size:60%; text-indent:-9999px; overflow-x:hidden;}
 
 #memberButtonBox {
 	width:875px;
