--- a/conplake/WebContent/resources/css/info_hall.css
+++ b/conplake/WebContent/resources/css/info_hall.css
@@ -113,3 +113,5 @@ div#seatReview {width:900px; height:500px;}
 
 input#write_review{ background:#666; float:right;}
 input#write_review:hover { background:#444;}
+
+#concerthallMap{width:800px; height:600px;}
